[package]
name = "lkl_fuzzer_grimoire"
version = "0.8.2"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.3" }
num_cpus = "1.0"

[dependencies]
hdexecutor = "0.1.1"
hdrepresentation = "0.1.851"
libafl = { path = "/home/t/Fuzzing/LibAFL-0.8.2/libafl", features = ["std", "derive"] }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "977415c", features = ["sancov_pcguard_hitcounts", "libfuzzer"] }
clap = { version = "4.0", features = ["derive"] }
nix = "0.25"
libafl_cc = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "977415c" }

[lib]
name = "libafl_lkl"
crate-type = ["staticlib"]
