[package]
name = "lkl_fuzzer_grimoire"
version = "0.8.2"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.3" }
num_cpus = "1.0"

[dependencies]
hdlibaflexecutor = "0.0.11"
hdrepresentation = "0.1.851"
libafl = { version = "0.9.0", default-features = false, features = [    "std", "derive", "llmp_compression", "llmp_small_maps", "llmp_broker_timeouts", "rand_trait", "gzip" ] }
libafl_targets = { version = "0.9.0", features = ["sancov_pcguard_hitcounts", "libfuzzer"] }
clap = { version = "4.0", features = ["derive"] }
nix = "0.25"

